@@ -204,7 +204,7 @@ show_notification_number = 1
 
 # show links to config tool for each host / service
 # you need to have the config tool plugin enabled
-# and you need proper permissions for the link to appear
+# and you need sufficient permissions for the link to appear
 show_config_edit_buttons = 0
 
 # display the backend name in the status details table
@@ -315,16 +315,6 @@ datetime_format_log    = %B %d, %Y  %H
 datetime_format_trends = %a %b %e %H:%M:%S %Y
 
 #####################################
-# statusmap plugin settings
-# you may change the default map type of the statusmap here. Valid
-# types are: 'table' and 'circle'
-statusmap_default_type    = table
-
-# and the statusmap default group by which has to be one of:
-# 'parent', 'address', 'domain', 'hostgroup', 'servicegroup'
-statusmap_default_groupby = address
-
-#####################################
 # This one activates all problem/impact and criticity
 # features. Currently it will only work with shinken
 # backends. Dont enable it unless all your backends are shinken.
@@ -414,7 +404,8 @@ skip_js_errors  = cluetip is not a function
 
 ######################################
 # COOKIE AUTH
-######################################
+# cookie auth requires additional webserver settings, see the documentation
+# for detailed instructions.
 cookie_auth_login_url             = thruk/cgi-bin/login.cgi
 cookie_auth_restricted_url        = http://localhost/thruk/cgi-bin/restricted.cgi
 cookie_auth_session_timeout       = 604800
@@ -425,7 +416,6 @@ cookie_auth_session_cache_timeout = 5
 
 ######################################
 # BACKENDS
-######################################
 # Get the status for remote backends from local instances. This can
 # increase performance when using multiple remote sites. It is enabled
 # by default when using more than one site. You have to define
@@ -434,7 +424,7 @@ cookie_auth_session_cache_timeout = 5
 #check_local_states = 1
 
 # set logging of backend in verbose mode. This only
-# makes sens when debug logging is activated
+# makes sense when debug logging is activated
 #backend_debug = 0
 
 # use connection pool when accessing multiple sites.
@@ -499,8 +489,11 @@ cookie_auth_session_cache_timeout = 5
 
 
 ######################################
-# CONFIG TOOL
+# PLUGINS
 ######################################
+
+######################################
+# CONFIG TOOL
 # enable config tool by setting path to different components
 # config files. Users with the roles
 # authorized_for_configuration_information and authorized_for_system_commands
@@ -514,8 +507,7 @@ cookie_auth_session_cache_timeout = 5
 </Component>
 
 ######################################
-# Panorama
-######################################
+# PANORAMA
 <Component Thruk::Plugin::Panorama>
     # stateprovider can be 'server' or 'cookie'
     state_provider = server
@@ -526,8 +518,7 @@ cookie_auth_session_cache_timeout = 5
 </Component>
 
 ######################################
-# Reports
-######################################
+# REPORTS 2
 <Component Thruk::Plugin::Reports2>
     # execute regular scheduled reports with this nice level
     #report_nice_level = 5
@@ -538,3 +529,16 @@ cookie_auth_session_cache_timeout = 5
     # wkhtmltopdf is used to convert html pages into pdf
     #wkhtmltopdf = /path/to/wkhtmltopdf
 </Component>
+
+#####################################
+# STATUSMAP
+<Component Thruk::Plugin::Statusmap>
+    # you may change the default map type of the statusmap here. Valid
+    # types are: 'table' and 'circle'
+    #default_type    = table
+
+    # and the statusmap default group by which has to be one of:
+    # 'parent', 'address', 'domain', 'hostgroup', 'servicegroup'
+    #default_groupby = address
+</Component>
+
